2010-11-19  Ryan S. Arnold  <rsa@us.ibm.com>

	* CONTRIBUTORS: Added Luis Machado.  Added DCO requirements.

2010-11-09  Luis Machado  <luisgpm@br.ibm.com>

	* strtod32.c (FUNCTION_L_INTERNAL): Fix comparison operator.

2010-11-08  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/s390/dfpu/numdigits.h: Remove include guards.
	* sysdeps/powerpc/dfpu/numdigits.h: Likewise.
	* sysdeps/soft-dfp/dpd/numdigits.h: Likewise.

2010-10-07  Ryan S. Arnold  <rsa@us.ibm.com>

	* tests/test-printf.c (printf_d128s): Added 0.9999999999DL which
	reported 0.100000 rather than 1.000000 and was fixed by Andreas'
	patch from 2010-10-04.

2010-10-04  Andreas Schwab  <schwab@redhat.com>

	* printf_dfp.c (__printf_dfp): Fix up nd when rounding overflows
	beyond first digit.

2010-08-25  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/soft-dfp/floatsisd.c: Don't generate additional decimal
	digit.

2010-08-24  Ryan S. Arnold  <rsa@us.ibm.com>

	* README.developer: Documentation update.
	* TODO: Mark some items as [DONE].

2010-08-23  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* init_dfp.c: Changed #include <dfp/dfp.h> to #include <dfp.h>.

2010-08-12  Luis Machado  <luisgpm@us.ibm.com>

	* tests/test-amort.c: Added license and copyright.
	* tests/test-printf.c: Updated copyright year.
	* tests/test-strtod.c: Added license and copyright.  Corrected
	incorrect expected values.
	* strtod32.c: Fixed several conversion bugs.

2010-08-12  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makefile.in: Removed test-left_justify from execution since it is a
	known failure case for non-power6 systems.  No worries since
	left_justify isn't used right now.
	* tests/test-amort.c: Removed spurious #include <dfp.h>.
	* tests/test-get_digits.c: Likewise.
	* tests/test-decode.c: Likewise.
	* tests/test-quantize.c: Likewise.
	* tests/test-printf.c: Likewise.
	* tests/test-fpclassify.c: Likewise.
	* tests/test-numdigits.c: Likewise.
	* tests/test-left_justify.c: Likewise.
	* tests/test-isinf.c: Likewise.