@@ -1,3 +1,9 @@
+2010-11-29  Ryan S. Arnold  <rsa@us.ibm.com>
+
+	* dfp/math.h: Move #include_next <math.h> so that if the compiler
+	invocation has -I/<path>/include/dfp/ but doesn't define
+	__STDC_WANT_DEC_FP__ that they still get the system math.h.
+
 2010-11-19  Ryan S. Arnold  <rsa@us.ibm.com>
 
 	* CONTRIBUTORS: Added Luis Machado.  Added DCO requirements.
